// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense List should render a Expense list 1`] = `
<div>
  <Connect(ExpenseItemFilters) />
  <div
    className="content-container"
  >
    <div
      className="list-header"
    >
      <div
        className="show-on-mobile"
      >
        Expenses
      </div>
      <div
        className="show-on-desktop"
      >
        Expense
      </div>
      <div
        className="show-on-desktop"
      >
        Amount
      </div>
    </div>
    <div
      className="list-body"
    >
      <Connect(ExpenseListItem)
        amount={1000}
        createdAt={345600000}
        description="Mobile"
        id="1"
        key="0"
        note=""
      />
      <Connect(ExpenseListItem)
        amount={500}
        createdAt={0}
        description="Pen"
        id="2"
        key="1"
        note=""
      />
      <Connect(ExpenseListItem)
        amount={2000}
        createdAt={-432000000}
        description="Headphone"
        id="3"
        key="2"
        note=""
      />
    </div>
  </div>
</div>
`;

exports[`Expense List should retrun no Expenses 1`] = `
<div>
  <Connect(ExpenseItemFilters) />
  <div
    className="content-container"
  >
    <div
      className="list-header"
    >
      <div
        className="show-on-mobile"
      >
        Expenses
      </div>
      <div
        className="show-on-desktop"
      >
        Expense
      </div>
      <div
        className="show-on-desktop"
      >
        Amount
      </div>
    </div>
    <div
      className="list-body"
    >
      <p
        className="list-item__message"
      >
        No Expese
      </p>
    </div>
  </div>
</div>
`;
